turso-test-runner/tests/snapshot_tests/analyze/snapshots/analyze__aggregate-after-analyze.snap
---
source: analyze.sqltest
expression: |-
  SELECT category, COUNT(*) as cnt, AVG(price) as avg_price
      FROM products
      GROUP BY category;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - populated_products
  database: ':memory:'
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode                  p1  p2  p3  p4                p5  comment
   0          Init             0  48   0                     0  Start at 48
   1          Null             0   9  10                     0  r[9..10]=NULL
   2          SorterOpen       0   2   0  k(1,B)             0  cursor=0
   3          Integer          0   6   0                     0  r[6]=0; clear group by abort flag
   4          Null             0   7   0                     0  r[7]=NULL; initialize group by comparison registers to NULL
   5          Gosub           14  44   0                     0  ; go to clear accumulator subroutine
   6          OpenRead         2   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   7          Rewind           2  14   0                     0  Rewind table products
   8            Column         2   3  12                     0  r[12]=products.category
   9            Column         2   4  13                     0  r[13]=products.price
  10            RealAffinity  13   0   0                     0
  11            MakeRecord    12   2  11                     0  r[11]=mkrec(r[12..13])
  12            SorterInsert   0  11   0  0                  0  key=r[11]
  13          Next             2   8   0                     0
  14          OpenPseudo       1  11   2                     0  2 columns in r[11]
  15          SorterSort       0  31   0                     0
  16            SorterData     0  11   1                     0  r[11]=data
  17            Column         1   0  15                     0  r[15]=pseudo.column 0
  18            Compare        7  15   1  k(1, Binary)       0  r[7..7]==r[15..15]
  19            Jump          20  24  20                     0  ; start new group if comparison is not equal
  20            Gosub          4  35   0                     0  ; check if ended group had data, and output if so
  21            Move          15   7   1                     0  r[7..7]=r[15..15]
  22            IfPos          6  47   0                     0  r[6]>0 -> r[6]-=0, goto 47; check abort flag
  23            Gosub         14  44   0                     0  ; goto clear accumulator subroutine
  24            AggStep        0  16   9  count              0  accum=r[9] step(r[16])
  25            Column         1   1  17                     0  r[17]=pseudo.column 1
  26            AggStep        0  17  10  avg                0  accum=r[10] step(r[17])
  27            If             5  29   0                     0  if r[5] goto 29; don't emit group columns if continuing existing group
  28            Column         1   0   8                     0  r[8]=pseudo.column 0
  29            Integer        1   5   0                     0  r[5]=1; indicate data in accumulator
  30          SorterNext       0  16   0                     0
  31          Gosub            4  35   0                     0  ; emit row for final group
  32          Goto             0  47   0                     0  ; group by finished
  33          Integer          1   6   0                     0  r[6]=1
  34        Return             4   0   0                     0
  35        IfPos              5  37   0                     0  r[5]>0 -> r[5]-=0, goto 37; output group by row subroutine start
  36      Return               4   0   0                     0
  37      AggFinal             0   9   0  count              0  accum=r[9]
  38      AggFinal             0  10   0  avg                0  accum=r[10]
  39      Copy                 8   1   0                     0  r[1]=r[8]
  40      Copy                 9   2   0                     0  r[2]=r[9]
  41      Copy                10   3   0                     0  r[3]=r[10]
  42      ResultRow            1   3   0                     0  output=r[1..3]
  43    Return                 4   0   0                     0
  44    Null                   0   8  10                     0  r[8..10]=NULL; clear accumulator subroutine start
  45    Integer                0   5   0                     0  r[5]=0
  46  Return                  14   0   0                     0
  47  Halt                     0   0   0                     0
  48  Transaction              0   1   5                     0  iDb=0 tx_mode=Read
  49  Integer                  1  16   0                     0  r[16]=1
  50  Goto                     0   1   0                     0
