turso-test-runner/tests/snapshot_tests/analyze/snapshots/analyze__analyze-all-stat1-exists.snap
---
source: analyze.sqltest
expression: ANALYZE;
info:
  statement_type: OTHER
  setup_blocks:
  - stat1_exists
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode       p1  p2  p3  p4                  p5  comment
   0  Init          0  60   0                       0  Start at 60
   1  Null          0   1   0                       0  r[1]=NULL
   2  OpenWrite     0   5   0                       0  root=5; iDb=0
   3  Rewind        0  10   0                       0  Rewind  sqlite_stat1
   4      Column    0   0   2                       0  r[2]=sqlite_stat1.tbl
   5      Ne        2   3   9                       0  if r[2]!=r[3] goto 9
   6      RowId     0   4   0                       0  r[4]=sqlite_stat1.rowid
   7      Delete    0   0   0  sqlite_stat1         0
   8    Next        0   4   0                       0
   9  Next          0   4   0                       0
  10  OpenRead      1   2   0  k(3,B,B,B)           0  =items, root=2, iDb=0
  11  Count         1  10   0                       0
  12  IfNot        10  19   0                       0  if !r[10] goto 19
  13  Null          0   7   0                       0  r[7]=NULL
  14  Copy         10   8   0                       0  r[8]=r[10]
  15  Cast          8   0   0                       0  affinity(r[8]=Text)
  16  MakeRecord    6   3   9                       0  r[9]=mkrec(r[6..8])
  17  NewRowid      0   5   0                       0  r[5]=rowid
  18  Insert        0   9   5  sqlite_stat1         0  intkey=r[5] data=r[9]
  19  OpenRead      2   4   0  k(2,B)               0  =idx_items_category, root=4, iDb=0
  20  Integer       1  12   0                       0  r[12]=1
  21  Function      0  12  11  stat_init            0  r[11]=func(r[12])
  22  Rewind        2  39   0                       0  Rewind  idx_items_category
  23  Integer       0  12   0                       0  r[12]=0
  24  Goto          0  30   0                       0
  25    Integer     0  12   0                       0  r[12]=0
  26    Column      2   0  14                       0  r[14]=idx_items_category.category
  27    Ne         14  13  30                       0  if r[14]!=r[13] goto 30
  28    Integer     1  12   0                       0  r[12]=1
  29    Goto        0  31   0                       0
  30    Column      2   0  13                       0  r[13]=idx_items_category.category
  31    Function    0  11  11  stat_push            0  r[11]=func(r[11..12])
  32  Next          2  25   0                       0
  33  Function      0  11  15  stat_get             0  r[15]=func(r[11])
  34  IsNull       15  39   0                       0  if (r[15]==NULL) goto 39
  35  Copy         15  18   0                       0  r[18]=r[15]
  36  MakeRecord   16   3  19                       0  r[19]=mkrec(r[16..18])
  37  NewRowid      0  20   0                       0  r[20]=rowid
  38  Insert        0  19  20  sqlite_stat1         0  intkey=r[20] data=r[19]
  39  OpenRead      3   3   0  k(2,B)               0  =idx_items_name, root=3, iDb=0
  40  Integer       1  22   0                       0  r[22]=1
  41  Function      0  22  21  stat_init            0  r[21]=func(r[22])
  42  Rewind        3  59   0                       0  Rewind  idx_items_name
  43  Integer       0  22   0                       0  r[22]=0
  44  Goto          0  50   0                       0
  45    Integer     0  22   0                       0  r[22]=0
  46    Column      3   0  24                       0  r[24]=idx_items_name.name
  47    Ne         24  23  50                       0  if r[24]!=r[23] goto 50
  48    Integer     1  22   0                       0  r[22]=1
  49    Goto        0  51   0                       0
  50    Column      3   0  23                       0  r[23]=idx_items_name.name
  51    Function    0  21  21  stat_push            0  r[21]=func(r[21..22])
  52  Next          3  45   0                       0
  53  Function      0  21  25  stat_get             0  r[25]=func(r[21])
  54  IsNull       25  59   0                       0  if (r[25]==NULL) goto 59
  55  Copy         25  28   0                       0  r[28]=r[25]
  56  MakeRecord   26   3  29                       0  r[29]=mkrec(r[26..28])
  57  NewRowid      0  30   0                       0  r[30]=rowid
  58  Insert        0  29  30  sqlite_stat1         0  intkey=r[30] data=r[29]
  59  Halt          0   0   0                       0
  60  Transaction   0   2   4                       0  iDb=0 tx_mode=Write
  61  String8       0   3   0  items                0  r[3]='items'
  62  String8       0   6   0  items                0  r[6]='items'
  63  String8       0  16   0  items                0  r[16]='items'
  64  String8       0  17   0  idx_items_category   0  r[17]='idx_items_category'
  65  String8       0  26   0  items                0  r[26]='items'
  66  String8       0  27   0  idx_items_name       0  r[27]='idx_items_name'
  67  Goto          0   1   0                       0
