turso-test-runner/tests/snapshot_tests/analyze/snapshots/analyze__query-after-analyze-equality.snap
---
source: analyze.sqltest
expression: SELECT id, name, price FROM products WHERE sku = 'SKU005';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - populated_products
  database: ':memory:'
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  12   0                     0  Start at 12
   1  OpenRead         0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  Rewind           0  11   0                     0  Rewind table products
   3    Column         0   1   5                     0  r[5]=products.sku
   4    Ne             5   6  10  Binary             0  if r[5]!=r[6] goto 10
   5    RowId          0   1   0                     0  r[1]=products.rowid
   6    Column         0   2   2                     0  r[2]=products.name
   7    Column         0   4   3                     0  r[3]=products.price
   8    RealAffinity   3   0   0                     0
   9    ResultRow      1   3   0                     0  output=r[1..3]
  10  Next             0   3   0                     0
  11  Halt             0   0   0                     0
  12  Transaction      0   1   5                     0  iDb=0 tx_mode=Read
  13  String8          0   6   0  SKU005             0  r[6]='SKU005'
  14  Goto             0   1   0                     0
