turso-test-runner/tests/snapshot_tests/analyze/snapshots/analyze__query-composite-full-after-analyze.snap
---
source: analyze.sqltest
expression: |-
  SELECT id, status, total_amount
      FROM orders
      WHERE customer_id = 100 AND order_date = '2024-01-15';
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - populated_orders
  database: ':memory:'
---
QUERY PLAN
`--SCAN orders

BYTECODE
addr  opcode           p1  p2  p3  p4              p5  comment
   0  Init              0  14   0                   0  Start at 14
   1  OpenRead          0   2   0  k(5,B,B,B,B,B)   0  table=orders, root=2, iDb=0
   2  Rewind            0  13   0                   0  Rewind table orders
   3    Column          0   1   5                   0  r[5]=orders.customer_id
   4    Ne              5   6  12  Binary           0  if r[5]!=r[6] goto 12
   5    Column          0   2   8                   0  r[8]=orders.order_date
   6    Ne              8   9  12  Binary           0  if r[8]!=r[9] goto 12
   7    RowId           0   1   0                   0  r[1]=orders.rowid
   8    Column          0   3   2                   0  r[2]=orders.status
   9    Column          0   4   3                   0  r[3]=orders.total_amount
  10    RealAffinity    3   0   0                   0
  11    ResultRow       1   3   0                   0  output=r[1..3]
  12  Next              0   3   0                   0
  13  Halt              0   0   0                   0
  14  Transaction       0   1   4                   0  iDb=0 tx_mode=Read
  15  Integer         100   6   0                   0  r[6]=100
  16  String8           0   9   0  2024-01-15       0  r[9]='2024-01-15'
  17  Goto              0   1   0                   0
