turso-test-runner/tests/snapshot_tests/analyze/snapshots/analyze__query-for-nulls-after-analyze.snap
---
source: analyze.sqltest
expression: "SELECT id, category, subcategory FROM items WHERE category IS NULL;"
info:
  statement_type: SELECT
  tables:
    - items
  setup_blocks:
    - null_values
  database: ":memory:"
---
QUERY PLAN
`--SCAN items

BYTECODE
addr  opcode       p1  p2  p3  p4          p5  comment
   0  Init          0  11   0               0  Start at 11
   1  OpenRead      0   2   0  k(3,B,B,B)   0  table=items, root=2, iDb=0
   2  Rewind        0  10   0               0  Rewind table items
   3    Column      0   1   4               0  r[4]=items.category
   4    NotNull     4   9   0               0  r[4]!=NULL -> goto 9
   5    RowId       0   1   0               0  r[1]=items.rowid
   6    Column      0   1   2               0  r[2]=items.category
   7    Column      0   2   3               0  r[3]=items.subcategory
   8    ResultRow   1   3   0               0  output=r[1..3]
   9  Next          0   3   0               0
  10  Halt          0   0   0               0
  11  Transaction   0   1   3               0  iDb=0 tx_mode=Read
  12  Goto          0   1   0               0
